[package]
name = "vcf_rider"
version = "0.1.0"
authors = ["Elena Grassi <grassi.e@gmail.com>"]

[dependencies]
bio = "*"
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib" }
itertools = "*"
argparse = "*"
bit-vec = "*"

[[bin]]
name = "vcf_rider"
doc = false

[[bin]]
name = "gc_counter"
path = "src/bin/gc_counter.rs"

[[bin]]
name = "gc_rider"
path = "src/bin/gc_rider.rs"